BASIRA #22 - Setting up artworks index page; Basic artworks edit page

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -12,6 +12,10 @@
     }
   },
   "Common": {
+    "buttons": {
+      "cancel": "Cancel",
+      "save": "Save"
+    },
     "title": "BASIRA"
   },
   "Home": {
