BASIRA #2 - Setting up physical components edit page and accordion menu

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -24,7 +24,6 @@
       "titles": "Titles"
     },
     "tabs": {
-      "details": "Details",
       "images": "Images"
     },
     "titles": {
@@ -58,6 +57,9 @@
     "messages": {
       "loading": "Loading"
     },
+    "tabs": {
+      "details": "Details"
+    },
     "title": "BASIRA"
   },
   "Home": {
@@ -74,5 +76,13 @@
   },
   "NotesModal": {
     "title": "Internal Notes"
+  },
+  "PhysicalComponent": {
+    "labels": {
+      "depth": "Depth",
+      "height": "Height",
+      "name": "Name",
+      "width": "Width"
+    }
   }
 }
