BASIRA #2 - Updating AccordionMenu behavior when an item is deleted

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -1,4 +1,8 @@
 {
+  "AccordionMenu": {
+    "deleteContent": "Are you sure you want to remove {{name}}?",
+    "deleteHeader": "Confirm Remove"
+  },
   "Admin": {
     "buttons": {
       "logout": "Logout"
