BASIRA #2 - Adding "Add New <type>" header to edit page components

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -58,6 +58,10 @@
     "errors": {
       "header": "Oops!"
     },
+    "labels": {
+      "artwork": "Artwork",
+      "physicalComponent": "Physical Component"
+    },
     "messages": {
       "loading": "Loading"
     },
@@ -87,6 +91,11 @@
       "height": "Height",
       "name": "Name",
       "width": "Width"
+    }
+  },
+  "SimpleEditPage": {
+    "labels": {
+      "add": "Add New {{type}}"
     }
   }
 }
