BASIRA #2 - Adding ability to upload a single image to physical components

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -93,6 +93,12 @@
       "width": "Width"
     }
   },
+  "RecordHeader": {
+    "buttons": {
+      "remove": "Remove",
+      "upload": "Upload"
+    }
+  },
   "SimpleEditPage": {
     "labels": {
       "add": "Add New {{type}}"
