--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -60,7 +60,8 @@
     },
     "labels": {
       "artwork": "Artwork",
-      "physicalComponent": "Physical Component"
+      "physicalComponent": "Physical Component",
+      "visualContext": "Visual Context"
     },
     "messages": {
       "loading": "Loading"
@@ -102,6 +103,15 @@
   "SimpleEditPage": {
     "labels": {
       "add": "Add New {{type}}"
+    }
+  },
+  "VisualContext": {
+    "labels": {
+      "depth": "Depth",
+      "height": "Height",
+      "name": "Name",
+      "notes": "Notes",
+      "width": "Width"
     }
   }
 }
