BASIRA #3 - Adding notes field to physical components edit page

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -91,6 +91,7 @@
       "depth": "Depth",
       "height": "Height",
       "name": "Name",
+      "notes": "Notes",
       "width": "Width"
     }
   },
