BASIRA #39 - Updating EditPage component to not redirect to index page after save

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -65,7 +65,11 @@
       "visualContext": "Visual Context"
     },
     "messages": {
-      "loading": "Loading"
+      "loading": "Loading",
+      "saved": {
+        "content": "Your changes have been saved.",
+        "header": "Success!"
+      }
     },
     "tabs": {
       "details": "Details"
