Value List index table UI + add/edit modal

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -140,6 +140,20 @@
       "add": "Add New {{type}}"
     }
   },
+  "ValueList": {
+    "labels": {
+      "authorizedVocabulary": "Authorized vocabulary",
+      "comment": "Comment",
+      "groupName": "Group name",
+      "humanName": "Human name",
+      "objectName": "Object name",
+      "urlDatabaseValue": "URL/Database value"
+    },
+    "title": {
+      "add": "Add value list item",
+      "edit": "Edit value list item"
+    }
+  },
   "VisualContext": {
     "labels": {
       "depth": "Depth",
