--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -259,6 +259,33 @@
       "add": "Add New {{type}}"
     }
   },
+  "UserModal": {
+    "labels": {
+      "email": "Email",
+      "name": "Name",
+      "password": "Password",
+      "passwordConfirmation": "Password confirmation",
+      "passwordPolicy": {
+        "content": "Passwords must be a minimum of six (6) characters",
+        "header": "Password Policy"
+      }
+    },
+    "title": {
+      "add": "Add User",
+      "edit": "Edit User"
+    }
+  },
+  "Users": {
+    "columns": {
+      "email": "Email",
+      "name": "Name"
+    },
+    "errors": {
+      "email": "Email {{error}}",
+      "password": "Password {{error}}",
+      "passwordConfirmation": "Password confirmation {{error}}"
+    }
+  },
   "VisualContext": {
     "labels": {
       "depth": "Depth",
