--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -7,6 +7,9 @@
     "buttons": {
       "logout": "Logout"
     },
+    "labels": {
+      "greeting": "Hello, {{name}}!"
+    },
     "menu": {
       "artworks": "Artworks",
       "people": "People",
