--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -150,6 +150,7 @@
       "comment": "Comment",
       "groupName": "Group name",
       "humanName": "Human name",
+      "linkedRecords": "Linked records",
       "objectName": "Object name",
       "urlDatabaseValue": "URL/Database value"
     },
