BASIRA #6 - Implementing ValueListDropdown component; Backend cleanup

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -29,6 +29,7 @@
       "endDate": "End date",
       "height": "Height",
       "notes": "Notes",
+      "objectWorkType": "Object/Work Type",
       "startDate": "Start date",
       "titles": "Titles",
       "width": "Width"
