Add Value List form inputs for Artwork show page

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -23,6 +23,7 @@
       "dateNumeric": "{{name}} must be a valid numeric year"
     },
     "labels": {
+      "commissioningContext": "Commissioning Context",
       "creationDate": "Creation date",
       "dateDescription": "Description",
       "depth": "Depth",
