Add Value List form inputs for Visual Context show page

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -325,11 +325,20 @@
   },
   "VisualContext": {
     "labels": {
+      "beta": "BETA",
       "depth": "Depth",
+      "generalSubjectGenre": "General Subject/Genre",
       "height": "Height",
       "name": "Name",
       "notes": "Notes",
+      "specificSubjectIconography": "Specific Subject/Iconography",
+      "subjectCulturalContext": "Subject Cultural Context",
       "width": "Width"
+    },
+    "tabs": {
+      "details": "Details",
+      "notes": "Notes",
+      "subjectMatter": "Subject Matter"
     }
   }
 }
