Add Value List form inputs for Document show page

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -111,30 +111,62 @@
   },
   "Document": {
     "labels": {
+      "aperture": "Aperture",
+      "bindingColor": "Binding Color",
+      "bindingIconography": "Binding Iconography",
+      "bindingOrnamentation": "Binding Ornamentation",
+      "bindingRelationshipToTextBlock": "Binding Relationship to Text Block",
+      "bindingType": "Binding Type",
       "bookmarksRegisters": "Bookmarks/Registers",
+      "bookmarkRegisterStyle": "Bookmark/Register Style",
+      "color": "Color",
+      "colorOfForeEdges": "Color of Fore-Edges",
+      "decoratedForeEdges": "Decorated Fore-Edges",
+      "documentFormat": "Document Format",
+      "documentType": "Document Type",
+      "endbandColors": "Endband Color(s)",
       "endbandPresent": "Endband Present",
+      "endbandStyle": "Endband Style",
+      "fastenings": "Fastenings",
       "foreEdgeText": "Fore-Edge Text",
+      "furniture": "Furniture",
+      "iconography": "Iconography",
+      "illumunationIconography": "Illumunation Iconography",
       "identity": "Identity of Work",
       "inscriptionsOnBinding": "Inscriptions on Binding",
       "inscriptionText": "Binding Inscription Text",
+      "language": "Language",
+      "legibility": "Legibility",
       "locationOfFastenings": "Location of Fastenings",
       "name": "Name",
       "notes": "Notes",
       "numberFastenings": "Number of Fastenings",
       "numberSewingSupports": "Number of Sewing Supports Visible",
+      "orientation": "Orientation",
+      "pageContents": "Page Contents",
       "rubrication": "Rubrication",
+      "rubricationColor": "Rubrication Color",
       "ruling": "Ruling",
+      "rulingColor": "Ruling Color",
+      "script": "Script",
       "sewingSupportsVisible": "Sewing Supports Visible",
+      "simulatedScript": "Simulated Script",
+      "size": "Size",
+      "spineFeatures": "Spine Features",
       "textColumns": "Text Columns",
+      "textTechnology": "Text Technology",
       "transcription": "Transcription",
+      "typeOfIllumination": "Type of Illumination",
       "uncutForeEdges": "Uncut Fore-Edges"
     },
     "sections": {
       "binding": "Binding",
       "bookmarks": "Bookmarks/Registers",
+      "details": "Details",
       "endband": "Endband",
       "foreEdges": "Fore-Edges/Textblock Edges",
       "layout": "Layout",
+      "positionScaleAttitude": "Position, Scale and Attitude",
       "text": "Text and Image"
     },
     "tabs": {
