BASIRA #6 - Implementing components for linking actions to documents

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -3,6 +3,15 @@
     "deleteContent": "Are you sure you want to remove {{name}}?",
     "deleteHeader": "Confirm Remove"
   },
+  "ActionModal": {
+    "labels": {
+      "notes": "Notes"
+    },
+    "title": {
+      "add": "Add Action",
+      "edit": "Edit Action"
+    }
+  },
   "Admin": {
     "buttons": {
       "logout": "Logout"
@@ -101,6 +110,13 @@
     "title": "BASIRA"
   },
   "Document": {
+    "actions": {
+      "book": "The book",
+      "columns": {
+        "entity": "Entity",
+        "verb": "Verb"
+      }
+    },
     "labels": {
       "bookmarksRegisters": "Bookmarks/Registers",
       "endbandPresent": "Endband Present",
@@ -129,6 +145,7 @@
       "text": "Text and Image"
     },
     "tabs": {
+      "actions": "Actions",
       "external": "External Features",
       "internal": "Internal Features"
     }
