Add optional form_field attr for form fields that share same ValueList

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -117,6 +117,7 @@
       "bindingOrnamentation": "Binding Ornamentation",
       "bindingRelationshipToTextBlock": "Binding Relationship to Text Block",
       "bindingType": "Binding Type",
+      "bookmarksRegisterColor": "Bookmark/Register Color",
       "bookmarksRegisters": "Bookmarks/Registers",
       "bookmarkRegisterStyle": "Bookmark/Register Style",
       "color": "Color",
