BASIRA #66 - Updating the EditPage component to navigate to the URL of a new record after saving

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -112,7 +112,8 @@
       "saved": {
         "content": "Your changes have been saved.",
         "header": "Success!"
-      }
+      },
+      "saving": "Saving"
     },
     "tabs": {
       "details": "Details",
