--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -373,6 +373,16 @@
       "edit": "Edit value list item"
     }
   },
+  "Validations": {
+    "errors": {
+      "dimensionNumeric": "{{name}} must be numeric"
+    },
+    "labels": {
+      "depth": "Depth",
+      "height": "Height",
+      "width": "Width"
+    }
+  },
   "ValueListsFiltersModal": {
     "labels": {
       "groupName": "Group name",
