BASIRA #64 - Adding resource strings for publish/notes button popups

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -324,6 +324,16 @@
     "buttons": {
       "remove": "Remove",
       "upload": "Upload"
+    },
+    "popups": {
+      "notes": {
+        "content": "Add or remove internal notes",
+        "header": "Notes"
+      },
+      "publish": {
+        "content": "Toggle the published indicator on/off",
+        "header": "Publish"
+      }
     }
   },
   "SimpleEditPage": {
