BASIRA #92 - Adding body descriptor field to actions modal

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -5,6 +5,7 @@
   },
   "ActionModal": {
     "labels": {
+      "body": "Body descriptors",
       "book": "The book",
       "descriptors": "Entity descriptors",
       "notes": "Notes"
