BASIRA #102 - Add People date columns

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -274,7 +274,10 @@
       "name": "Name",
       "nationality": "Nationality",
       "type": "Type",
-      "url": "URL"
+      "url": "URL",
+      "yearOfBirth": "Year of birth",
+      "yearOfDeath": "Year of death",
+      "yearsOfActivity": "Years of activity"
     },
     "locations": {
       "columns": {
