BASIRA #109 - Converting the location_of_fastenings dropdown to a value list selection

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -168,7 +168,7 @@
       "inscriptionText": "Binding Inscription Text",
       "language": "Language",
       "legibility": "Legibility",
-      "locationOfFastenings": "Location of Fastenings",
+      "locationsOfFastenings": "Locations of Fastenings",
       "name": "Name",
       "notes": "Notes",
       "numberFastenings": "Number of Fastenings",
