BASIRA #118 - Fix typo on iconography label

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -173,7 +173,7 @@
       "foreEdgeText": "Fore-Edge Text",
       "furniture": "Furniture",
       "iconography": "Iconography",
-      "illumunationIconography": "Illumunation Iconography",
+      "illuminationIconography": "Illumination Iconography",
       "identity": "Identity of Work",
       "inscriptionsOnBinding": "Inscriptions on Binding",
       "inscriptionText": "Binding Inscription Text",
