--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -162,8 +162,8 @@
       "bookmarksRegisters": "Bookmarks/Registers",
       "bookmarkRegisterStyle": "Bookmark/Register Style",
       "color": "Color",
-      "colorOfForeEdges": "Color of Fore-Edges",
-      "decoratedForeEdges": "Decorated Fore-Edges",
+      "colorOfForeEdges": "Color of Textblock Edges",
+      "decoratedForeEdges": "Decorated Textblock Edges",
       "documentFormat": "Document Format",
       "documentType": "Document Type",
       "endbandColors": "Endband Color(s)",
