BASIRA #126 - Fix label and form for Place Modal

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -336,6 +336,12 @@
       "people": "People"
     }
   },
+  "PlaceModal": {
+    "title": {
+      "add": "Add Place",
+      "edit": "Edit Place"
+    }
+  },
   "Places": {
     "columns": {
       "city": "City",
