--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -105,6 +105,20 @@
       "edit": "Edit Title"
     }
   },
+  "Artworks": {
+    "filters": {
+      "createdAt": "Created date",
+      "createdBy": "Created by",
+      "dateDescriptor": "Date descriptor",
+      "endDate": "End date",
+      "externalNotes": "External notes",
+      "internalNotes": "Internal notes",
+      "published": "Published",
+      "startDate": "Start date",
+      "updatedAt": "Updated date",
+      "updatedBy": "Updated by"
+    }
+  },
   "AttachmentModal": {
     "labels": {
       "imageRights": "Image rights",
