--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -141,7 +141,7 @@
       "details": "Details",
       "locations": "Locations"
     },
-    "title": "BASIRA"
+    "title": "BASIRA Project"
   },
   "Document": {
     "actions": {
@@ -227,7 +227,8 @@
     "buttons": {
       "login": "Login"
     },
-    "subtitle": "The BASIRA Project, a digital humanities research effort, explores interconnections of book history and European art during the Renaissance. As a database of visual images, tagged with structured details, the project may be useful for studies of art history, material culture, religious history, printing technology, iconography, and history of literacy."
+    "subtitle": "Books as Symbols in Renaissance Art",
+    "description": "The BASIRA Project, a digital humanities research effort, explores interconnections of book history and European art during the Renaissance. As a database of visual images, tagged with structured details, the project may be useful for studies of art history, material culture, religious history, printing technology, iconography, and history of literacy."
   },
   "Images": {
     "buttons": {
