--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -106,6 +106,9 @@
     }
   },
   "Artworks": {
+    "buttons": {
+      "addPhysicalComponent": "Add Physical Component"
+    },
     "filters": {
       "createdAt": "Created date",
       "createdBy": "Created by",
