--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -263,6 +263,7 @@
       "notes": "Notes",
       "person": "Person",
       "place": "Place",
+      "repositoryWorkUrl": "Repository work URL",
       "role": "Role",
       "subrole": "Subrole"
     },
