--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -48,7 +48,7 @@
     },
     "labels": {
       "commissioningContext": "Commissioning Context",
-      "creationDate": "Creation date",
+      "creationDate": "Created date",
       "dateDescription": "Description",
       "depth": "Depth",
       "documentsVisible": "Documents Visible",
