add parent change modal
WIP

update the accordion on save

don't send entire form state when reordering

update item state when parent changed

WIP

continue refactor

fix payload issue

remove debug

more specific headers

address most feedback

use selectize

address some feedback

get formatting changes out of diff

remove old CSS and fix linting error

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -223,6 +223,12 @@
       "typeOfIllumination": "Type of Illumination",
       "uncutForeEdges": "Uncut Fore-Edges"
     },
+    "popups": {
+      "changeVisualContext": {
+        "header": "Select Parent Visual Context",
+        "content": "Change the parent visual context for this document."
+      }
+    },
     "sections": {
       "binding": "Binding",
       "bookmarks": "Bookmarks/Registers",
@@ -478,6 +484,12 @@
       "details": "Details",
       "notes": "Notes",
       "subjectMatter": "Subject Matter"
+    },
+    "popups": {
+      "changePhysicalComponent": {
+        "header": "Select Parent Physical Component",
+        "content": "Change the parent physical component for this visual context."
+      }
     }
   }
 }
