BASIRA #183 - Adding read only document page and supporting components

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -146,6 +146,7 @@
     "labels": {
       "artwork": "Artwork",
       "document": "Document",
+      "id": "ID",
       "physicalComponent": "Physical Component",
       "visualContext": "Visual Context"
     },
@@ -172,6 +173,7 @@
       }
     },
     "labels": {
+      "action": "The document {{verb}} {{entity}}",
       "aperture": "Aperture",
       "bindingColor": "Binding Color",
       "bindingIconography": "Binding Iconography",
