BASIRA #183 - Adding read only artwork page and supporting components

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -83,6 +83,11 @@
       "objectWorkTypes": "Select object/work type...",
       "techniques": "Select technique(s)..."
     },
+    "sections": {
+      "creators": "Creators",
+      "locations": "Locations",
+      "titles": "Titles"
+    },
     "tabs": {
       "creators": "Creators",
       "images": "Images",
@@ -138,6 +143,7 @@
   "Common": {
     "buttons": {
       "cancel": "Cancel",
+      "viewSource": "View Source",
       "save": "Save"
     },
     "errors": {
