--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -1,4 +1,12 @@
 {
+  "404": {
+    "messages": {
+      "notFound": {
+        "content": "We can't seem to find the page you're looking for. Try going back to the previous page or starting your search over.",
+        "header": "Page Not Found"
+      }
+    }
+  },
   "AccordionMenu": {
     "deleteContent": "Are you sure you want to remove {{name}}?",
     "deleteHeader": "Confirm Remove"
@@ -142,6 +150,7 @@
   },
   "Common": {
     "buttons": {
+      "back": "Back",
       "cancel": "Cancel",
       "viewSource": "View Source",
       "save": "Save"
