BASIRA #187 - Adding SearchThumbnail and ImageCarousel components

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -419,6 +419,11 @@
       }
     }
   },
+  "SearchThumbnail": {
+    "labels": {
+      "imageCount": "+{{count}}"
+    }
+  },
   "SimpleEditPage": {
     "labels": {
       "add": "Add New {{type}}"
