BASIRA #187 - Search facets, initial commit

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -419,6 +419,63 @@
       }
     }
   },
+  "Search": {
+    "facets": {
+      "aperture": "Aperture",
+      "bindingColor": "Binding Color",
+      "bindingIconography": "Binding Iconography",
+      "bindingOrnamentation": "Binding Ornamentation",
+      "bindingRelationship": "Binding Relationship to Textblock",
+      "bindingType": "Binding Type",
+      "bookmarkColor": "Color",
+      "bookmarkStyle": "Bookmark/Register Style",
+      "bookmarks": "Bookmarks/Registers",
+      "creator": "Creator",
+      "date": "Date",
+      "decoratedForeEdges": "Decorated Textblock Edges",
+      "documentFormat": "Document Format",
+      "documentType": "Document Type",
+      "endbandColors": "Endband Color(s)",
+      "endbandPresent": "Endband Present",
+      "endbandStyle": "Endband Style",
+      "fastenings": "Fastenings",
+      "foreEdgesColor": "Color of Textblock Edges",
+      "furniture": "Furniture",
+      "generalSubject": "General Subject",
+      "illuminationIconography": "Illumination Iconography",
+      "illuminationType": "Type of Illumination",
+      "inscriptionsOnBinding": "Inscriptions on Binding",
+      "language": "Language",
+      "legibility": "Legibility",
+      "locationFastenings": "Location of Fastenings",
+      "materials": "Materials",
+      "nationality": "Creator Place of Origin",
+      "numberFastenings": "Number of Fastenings",
+      "numberSewingSupports": "Number of Sewing Supports Visible",
+      "objectWorkType": "Object Work/Type",
+      "orientation": "Orientation",
+      "pageContents": "Page Contents",
+      "repository": "Repository",
+      "repositoryCity": "Repository City",
+      "repositoryCountry": "Repository Country",
+      "repositoryState": "Repository State",
+      "rubrication": "Rubrication",
+      "rubricationColor": "Rubrication Color",
+      "ruling": "Ruling",
+      "rulingColor": "Ruling Color",
+      "sewingSupportsVisible": "Sewing Supports Visible",
+      "script": "Script",
+      "simulatedScript": "Simulated Script",
+      "size": "Size",
+      "specificSubject": "Specific Subject/Iconography",
+      "spineFeatures": "Spine Features",
+      "subjectCulturalContext": "Subject Cultural Context",
+      "techniques": "Techniques",
+      "textColumns": "Text Columns",
+      "textTechnology": "Text Technology",
+      "uncutForeEdges": "Uncut Fore-Edges"
+    }
+  },
   "SearchThumbnail": {
     "labels": {
       "imageCount": "+{{count}}"
