--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -420,18 +420,35 @@
     }
   },
   "Search": {
+    "buttons": {
+      "clearFacets": "Clear Facets"
+    },
     "facets": {
       "aperture": "Aperture",
+      "artwork": {
+        "creators": {
+          "displayName": "Creator",
+          "nationality": "Creator Place of Origin"
+        },
+        "dateRange": "Date",
+        "materials": "Materials",
+        "locations": {
+          "name": "Repository",
+          "city": "Repository City",
+          "country": "Repository Country",
+          "state": "Repository State"
+        },
+        "objectWorkType": "Object Work/Type",
+        "techniques": "Techniques"
+      },
       "bindingColor": "Binding Color",
       "bindingIconography": "Binding Iconography",
       "bindingOrnamentation": "Binding Ornamentation",
       "bindingRelationship": "Binding Relationship to Textblock",
       "bindingType": "Binding Type",
-      "bookmarkColor": "Color",
+      "bookmarkRegisterColor": "Color",
       "bookmarkStyle": "Bookmark/Register Style",
-      "bookmarks": "Bookmarks/Registers",
-      "creator": "Creator",
-      "date": "Date",
+      "bookmarksRegisters": "Bookmarks/Registers",
       "decoratedForeEdges": "Decorated Textblock Edges",
       "documentFormat": "Document Format",
       "documentType": "Document Type",
@@ -441,24 +458,17 @@
       "fastenings": "Fastenings",
       "foreEdgesColor": "Color of Textblock Edges",
       "furniture": "Furniture",
-      "generalSubject": "General Subject",
       "illuminationIconography": "Illumination Iconography",
       "illuminationType": "Type of Illumination",
       "inscriptionsOnBinding": "Inscriptions on Binding",
       "language": "Language",
       "legibility": "Legibility",
       "locationFastenings": "Location of Fastenings",
-      "materials": "Materials",
-      "nationality": "Creator Place of Origin",
       "numberFastenings": "Number of Fastenings",
       "numberSewingSupports": "Number of Sewing Supports Visible",
       "objectWorkType": "Object Work/Type",
       "orientation": "Orientation",
       "pageContents": "Page Contents",
-      "repository": "Repository",
-      "repositoryCity": "Repository City",
-      "repositoryCountry": "Repository Country",
-      "repositoryState": "Repository State",
       "rubrication": "Rubrication",
       "rubricationColor": "Rubrication Color",
       "ruling": "Ruling",
@@ -467,13 +477,15 @@
       "script": "Script",
       "simulatedScript": "Simulated Script",
       "size": "Size",
-      "specificSubject": "Specific Subject/Iconography",
       "spineFeatures": "Spine Features",
-      "subjectCulturalContext": "Subject Cultural Context",
-      "techniques": "Techniques",
       "textColumns": "Text Columns",
       "textTechnology": "Text Technology",
-      "uncutForeEdges": "Uncut Fore-Edges"
+      "uncutForeEdges": "Uncut Fore-Edges",
+      "visualContext": {
+        "generalSubject": "General Subject",
+        "specificSubject": "Specific Subject/Iconography",
+        "subjectCulturalContext": "Subject Cultural Context"
+      }
     }
   },
   "SearchThumbnail": {
