BASIRA #187 - Adding document action facets

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -424,6 +424,12 @@
       "clearFacets": "Clear Facets"
     },
     "facets": {
+      "actions": {
+        "bodyDescriptors": "Body Descriptors",
+        "entity": "Entity",
+        "entityDescriptors": "Entity Descriptors",
+        "verb": "Verb"
+      },
       "aperture": "Aperture",
       "artwork": {
         "creators": {
