BASIRA #208 - Refactoring AccordionMenu component into ArtworkMenu and AdminArtworkMenu components

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -7,7 +7,7 @@
       }
     }
   },
-  "AccordionMenu": {
+  "AdminArtworkMenu": {
     "deleteContent": "Are you sure you want to remove {{name}}?",
     "deleteHeader": "Confirm Remove"
   },
