BASIRA #208 - Adding a "Back to Search" button for result detail pages

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -502,6 +502,11 @@
       }
     }
   },
+  "SearchLink": {
+    "buttons": {
+      "back": "Back to Search"
+    }
+  },
   "SearchThumbnail": {
     "labels": {
       "imageCount": "+{{count}}"
