BASIRA #209 - Adding "admin" checkbox to users modal

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -514,6 +514,7 @@
   },
   "UserModal": {
     "labels": {
+      "admin": "Administrator",
       "email": "Email",
       "name": "Name",
       "password": "Password",
