--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -156,7 +156,8 @@
       "save": "Save"
     },
     "errors": {
-      "header": "Oops!"
+      "header": "Oops!",
+      "unauthorized": "You do not have permission to delete records."
     },
     "labels": {
       "artwork": "Artwork",
