BASIRA #230 - Adding expand/collapse all buttons to SearchFacets component

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -503,6 +503,12 @@
       }
     }
   },
+  "SearchFacets": {
+    "buttons": {
+      "collapse": "Collapse All",
+      "expand": "Expand All"
+    }
+  },
   "SearchLink": {
     "buttons": {
       "back": "Back to Search"
