BASIRA #214 - Adding header links to search page; Adding footer links to all pages

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -295,6 +295,13 @@
       "upload": "Upload images"
     }
   },
+  "LinksMenu": {
+    "labels": {
+      "basira": "BASIRA Project Home",
+      "contact": "Contact Us",
+      "contribute": "Contribute Content"
+    }
+  },
   "LocationModal": {
     "labels": {
       "artwork": "Artwork",
