BASIRA #254 - Updating documents "text_columns" to default to "0" and non-nullable; Updating react-components packages to latest versions

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -239,7 +239,7 @@
       "simulatedScript": "Simulated Script",
       "size": "Size",
       "spineFeatures": "Spine Features",
-      "textColumns": "Text Columns",
+      "textColumns": "Number of Text Columns Visible",
       "textTechnology": "Text Technology",
       "transcriptionDiplomatic": "Transcription: Diplomatic",
       "transcriptionExpanded": "Transcription: Expanded",
@@ -513,7 +513,7 @@
       "simulatedScript": "Simulated Script",
       "size": "Size",
       "spineFeatures": "Spine Features",
-      "textColumns": "Text Columns",
+      "textColumns": "Number of Text Columns Visible",
       "textTechnology": "Text Technology",
       "uncutForeEdges": "Uncut Fore-Edges",
       "visualContext": {
