BASIRA #254 - Defaulting documents "bookmarks/registers" to "0"

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -203,7 +203,7 @@
       "bindingRelationshipToTextBlock": "Binding Relationship to Text Block",
       "bindingType": "Binding Type",
       "bookmarksRegisterColor": "Bookmark/Register Color",
-      "bookmarksRegisters": "Bookmarks/Registers",
+      "bookmarksRegisters": "Number of Bookmarks/Registers Visible",
       "bookmarkRegisterStyle": "Bookmark/Register Style",
       "color": "Color",
       "colorOfForeEdges": "Color of Textblock Edges",
@@ -483,7 +483,7 @@
       "bindingType": "Binding Type",
       "bookmarkRegisterColor": "Color",
       "bookmarkStyle": "Bookmark/Register Style",
-      "bookmarksRegisters": "Bookmarks/Registers",
+      "bookmarksRegisters": "Number of Bookmarks/Registers Visible",
       "decoratedForeEdges": "Decorated Textblock Edges",
       "documentFormat": "Document Format",
       "documentType": "Document Type",
