BASIRA #256 - Changing "Color" label to "Color of Bookmarks/Registers"

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -202,10 +202,9 @@
       "bindingOrnamentation": "Binding Ornamentation",
       "bindingRelationshipToTextBlock": "Binding Relationship to Text Block",
       "bindingType": "Binding Type",
-      "bookmarksRegisterColor": "Bookmark/Register Color",
+      "bookmarksRegisterColor": "Color of Bookmarks/Registers",
       "bookmarksRegisters": "Number of Bookmarks/Registers Visible",
       "bookmarkRegisterStyle": "Bookmark/Register Style",
-      "color": "Color",
       "colorOfForeEdges": "Color of Textblock Edges",
       "decoratedForeEdges": "Decorated Textblock Edges",
       "documentFormat": "Document Format",
@@ -481,7 +480,7 @@
       "bindingOrnamentation": "Binding Ornamentation",
       "bindingRelationship": "Binding Relationship to Textblock",
       "bindingType": "Binding Type",
-      "bookmarkRegisterColor": "Color",
+      "bookmarkRegisterColor": "Color of Bookmarks/Registers",
       "bookmarkStyle": "Bookmark/Register Style",
       "bookmarksRegisters": "Number of Bookmarks/Registers Visible",
       "decoratedForeEdges": "Decorated Textblock Edges",
