BASIRA #256 - Updating "Creator Place of Origin" label to "Creator Origin"

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -454,7 +454,7 @@
       "artwork": {
         "creators": {
           "displayName": "Creator",
-          "nationality": "Creator Place of Origin"
+          "nationality": "Creator Origin"
         },
         "dateRange": "Date",
         "materials": "Materials",
