BASIRA #256 - Changing "Orientation" label to "Orientation of Spine"

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -227,7 +227,7 @@
       "notes": "Notes",
       "numberFastenings": "Number of Fastenings",
       "numberSewingSupports": "Number of Sewing Supports Visible",
-      "orientation": "Orientation",
+      "orientation": "Orientation of Spine",
       "pageContents": "Page Contents",
       "rubrication": "Rubrication",
       "rubricationColor": "Rubrication Color",
@@ -501,7 +501,7 @@
       "numberFastenings": "Number of Fastenings",
       "numberSewingSupports": "Number of Sewing Supports Visible",
       "objectWorkType": "Object Work/Type",
-      "orientation": "Orientation",
+      "orientation": "Orientation of Spine",
       "pageContents": "Page Contents",
       "rubrication": "Rubrication",
       "rubricationColor": "Rubrication Color",
