BASIRA #259 - Adding "Script Type" value list field; Moving "Simulated Script" below "Script Type"

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -234,6 +234,7 @@
       "ruling": "Ruling",
       "rulingColor": "Ruling Color",
       "script": "Script",
+      "scriptType": "Script Type",
       "sewingSupportsVisible": "Sewing Supports Visible",
       "simulatedScript": "Simulated Script",
       "size": "Size",
@@ -509,6 +510,7 @@
       "rulingColor": "Ruling Color",
       "sewingSupportsVisible": "Sewing Supports Visible",
       "script": "Script",
+      "scriptType": "Script Type",
       "simulatedScript": "Simulated Script",
       "size": "Size",
       "spineFeatures": "Spine Features",
