BASIRA #270 - Refactoring artwork, physical component, visual context, and document detail page layouts

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -168,6 +168,7 @@
     },
     "labels": {
       "artwork": "Artwork",
+      "details": "Details",
       "document": "Document",
       "id": "ID",
       "physicalComponent": "Physical Component",
