BASIRA #271 - Adding created at and update at timestamps to artwork, physical component, visual context, and document detail pages

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -168,10 +168,12 @@
     },
     "labels": {
       "artwork": "Artwork",
+      "created": "Record created",
       "details": "Details",
       "document": "Document",
       "id": "ID",
       "physicalComponent": "Physical Component",
+      "updated": "Record updated",
       "visualContext": "Visual Context"
     },
     "messages": {
