BASIRA #272 - Adding document count facet

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -461,6 +461,7 @@
           "nationality": "Creator Origin"
         },
         "dateRange": "Date",
+        "documentsCount": "Number of Documents",
         "materials": "Materials",
         "locations": {
           "name": "Repository",
