BASIRA #275 - Re-labeling "Authorized Vocabulary URL" to "Institutional URL"

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -396,7 +396,7 @@
       "notes": "Notes",
       "state": "State",
       "type": "Type",
-      "url": "Authorized Vocabulary URL"
+      "url": "Institutional URL"
     },
     "locations": {
       "columns": {
