BASIRA #275 - Adding authorized_vocabulary and authorized_vocabulary_url fields to places

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -396,7 +396,9 @@
       "notes": "Notes",
       "state": "State",
       "type": "Type",
-      "url": "Institutional URL"
+      "url": "Institutional URL",
+      "authorizedVocabulary": "Authorized vocabulary",
+      "authorizedVocabularyUrl": "Authorized vocabulary URL"
     },
     "locations": {
       "columns": {
