BASIRA #284 - Updating "People" menu item to "Creators"; Updating "Places" menu item to "Repositories"

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -32,8 +32,8 @@
     },
     "menu": {
       "artworks": "Artworks",
-      "people": "People",
-      "places": "Places",
+      "people": "Creators",
+      "places": "Repositories",
       "users": "Users",
       "valueLists": "Value Lists"
     }
