--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -220,6 +220,7 @@
       "foreEdgeText": "Fore-Edge Text",
       "furniture": "Furniture",
       "iconography": "Iconography",
+      "id": "Documents/{{id}}",
       "illuminationIconography": "Illumination Iconography",
       "identity": "Identity of Work",
       "inscriptionsOnBinding": "Inscriptions on Binding",
