BASIRA #286 - Modifying fields on related locations and creators on artwork page

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -159,7 +159,6 @@
     "buttons": {
       "back": "Back",
       "cancel": "Cancel",
-      "viewSource": "View Source",
       "save": "Save"
     },
     "errors": {
@@ -321,6 +320,11 @@
     "title": {
       "add": "Add Location",
       "edit": "Edit Location"
+    }
+  },
+  "Locations": {
+    "labels": {
+      "viewInstitution": "View Institution"
     }
   },
   "NotesModal": {
