BASIRA #291 - Updating Search page to storage search history in session storage (via SearchHistory); Adding "/search_history" route and table to display recent searches

--- a/client/src/i18n/en.json
+++ b/client/src/i18n/en.json
@@ -531,6 +531,9 @@
         "subjectCulturalContext": "Subject Cultural Context"
       }
     },
+    "labels": {
+      "viewRecent": "View Recent"
+    },
     "sort": {
       "artworkDate": {
         "label": "Artwork Date",
@@ -551,6 +554,19 @@
     "buttons": {
       "collapse": "Collapse All",
       "expand": "Expand All"
+    }
+  },
+  "SearchHistory": {
+    "buttons": {
+      "clear": "Clear"
+    },
+    "columns": {
+      "created": "Created",
+      "facets": "Facets",
+      "query": "Query"
+    },
+    "messages": {
+      "copy": "Copied URL to clipboard"
     }
   },
   "SearchLink": {
